--- a/pages/20019.html
+++ b/pages/20019.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      diagrammatic knot theory in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      diagrammatic knot theory
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9408/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,62 +310,56 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><svg xmlns:xlink="http://www.w3.org/1999/xlink" width="91.415pt" height="6.376pt" viewBox="0 0 91.415 6.376" version="1.1" xmlns="http://www.w3.org/2000/svg">
-<defs>
-<clipPath id="clip1">
-  <path d="M 0 0 L 7 0 L 7 6.375 L 0 6.375 Z M 0 0 "></path>
-</clipPath>
-<clipPath id="clip2">
-  <path d="M 0 0 L 12 0 L 12 6.375 L 0 6.375 Z M 0 0 "></path>
-</clipPath>
-<clipPath id="clip3">
-  <path d="M 85 0 L 91.414062 0 L 91.414062 6.375 L 85 6.375 Z M 85 0 "></path>
-</clipPath>
-<clipPath id="clip4">
-  <path d="M 79 0 L 91.414062 0 L 91.414062 6.375 L 79 6.375 Z M 79 0 "></path>
-</clipPath>
-</defs>
-<g id="surface1">
-<g clip-path="url(#clip1)" clip-rule="nonzero">
-<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;" d="M 6.175781 3.1875 C 6.175781 1.539062 4.839844 0.199219 3.1875 0.199219 C 1.539062 0.199219 0.199219 1.539062 0.199219 3.1875 C 0.199219 4.839844 1.539062 6.175781 3.1875 6.175781 C 4.839844 6.175781 6.175781 4.839844 6.175781 3.1875 Z M 6.175781 3.1875 "></path>
-</g>
-<g clip-path="url(#clip2)" clip-rule="nonzero">
-<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M 2.987781 0.0005 C 2.987781 1.648938 1.651844 2.988781 -0.0005 2.988781 C -1.648938 2.988781 -2.988781 1.648938 -2.988781 0.0005 C -2.988781 -1.651844 -1.648938 -2.987781 -0.0005 -2.987781 C 1.651844 -2.987781 2.987781 -1.651844 2.987781 0.0005 Z M 2.987781 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
-</g>
-<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -0.0005 0.0005 L 85.038562 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
-<g clip-path="url(#clip3)" clip-rule="nonzero">
-<path style=" stroke:none;fill-rule:nonzero;fill:rgb(100%,0%,0%);fill-opacity:1;" d="M 91.21875 3.1875 C 91.21875 1.539062 89.878906 0.199219 88.226562 0.199219 C 86.578125 0.199219 85.238281 1.539062 85.238281 3.1875 C 85.238281 4.839844 86.578125 6.175781 88.226562 6.175781 C 89.878906 6.175781 91.21875 4.839844 91.21875 3.1875 Z M 91.21875 3.1875 "></path>
-</g>
-<g clip-path="url(#clip4)" clip-rule="nonzero">
-<path style="fill:none;stroke-width:0.3985;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(100%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M 88.03075 0.0005 C 88.03075 1.648938 86.690906 2.988781 85.038562 2.988781 C 83.390125 2.988781 82.050281 1.648938 82.050281 0.0005 C 82.050281 -1.651844 83.390125 -2.987781 85.038562 -2.987781 C 86.690906 -2.987781 88.03075 -1.651844 88.03075 0.0005 Z M 88.03075 0.0005 " transform="matrix(1,0,0,-1,3.188,3.188)"></path>
-</g>
-</g>
-</svg>
-<p>\begin{tikzcd} A \ar[r] &amp; B \end{tikzcd}</p>
+<body>
 
-<p>\begin{exmpl} So \end{exmpl}</p>
-</body></html>
+<h1 id='section_table_of_contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#section_Introduction'>Introduction</a></li>
+<li><a href='#section_Starting_point'>Starting point</a></li>
+<li><a href='#section_Invariants'>Invariants</a></li>
+<li><a href='#section_Purely_diagrammatic_fields'>Purely diagrammatic fields</a></li>
+</ul>
+</div>
+
+
+<p><h2 id='section_Introduction'>Introduction</h2></p>
+
+<p><em>Diagrammatic knot theory</em> is an approach to <a class="existingWikiWord" href="/nlab/show/knot+theory">knot theory</a> and surrounding fields in which <a class="existingWikiWord" href="/nlab/show/link+diagrams">link diagrams</a> and generalisations are the principal means with which one works with <a class="existingWikiWord" href="/nlab/show/knots">knots</a>, <a class="existingWikiWord" href="/nlab/show/links">links</a>, <a class="existingWikiWord" href="/nlab/show/3-manifolds">3-manifolds</a>, and other objects in <a class="existingWikiWord" href="/nlab/show/geometric+topology">geometric topology</a>. It has a highly combinatorial and pictorial, and sometimes also elementary, flavour.</p>
+
+<p><h2 id='section_Starting_point'>Starting point</h2></p>
+
+<p>The fundamental result, akin to the <a class="existingWikiWord" href="/nlab/show/Nullstellensatz">Nullstellensatz</a> in algebraic geometry for instance, which makes this approach to knot theory possible is <a class="existingWikiWord" href="/nlab/show/Reidemeister%27s+theorem">Reidemeister's theorem</a>.</p>
+
+<p><h2 id='section_Invariants'>Invariants</h2></p>
+
+<p>Invariants in diagrammatic knot theory are typically obtained by proving invariance under the <a class="existingWikiWord" href="/nlab/show/Reidemeister+moves">Reidemeister moves</a> or other collections of moves (usually including at least some of the Reidemeister moves).</p>
+
+<p><h2 id='section_Purely_diagrammatic_fields'>Purely diagrammatic fields</h2></p>
+
+<p>Some modern flavours of knot theory, such as <a class="existingWikiWord" href="/nlab/show/virtual+knot+theory">virtual knot theory</a>, are <em>defined</em> diagrammatically, although geometric interpretations have sometimes later been found.</p>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/knot+theory">knot theory</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 15:41:15.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on December 30, 2018 at 15:57:49.
+  See the <a href="https://ncatlab.org/nlab/history/diagrammatic knot theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1740" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1740 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/diagrammatic+knot+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/diagrammatic knot theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/diagrammatic+knot+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/diagrammatic+knot+theory" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/diagrammatic+knot+theory" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
