--- a/pages/2570.html
+++ b/pages/2570.html
@@ -317,7 +317,19 @@ margin-left: 0em;
 
 <h4 id="linear_algebra">Linear algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p><p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p><p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p><p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p><p><strong>Introductions</strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p>
+
+<p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p>
+
+<p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p>
+
+<p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology+--+2">Introduction to Basic Homotopy Theory</a></p>
 </li>
@@ -329,7 +341,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometry+of+physics+--+homotopy+types">geometry of physics – homotopy types</a></p>
 </li>
-</ul><p><strong>Definitions</strong></p><ul>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy">homotopy</a>, <a class="existingWikiWord" href="/nlab/show/higher+homotopy">higher homotopy</a></p>
 </li>
@@ -381,7 +397,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+category+of+an+%28%E2%88%9E%2C1%29-category">homotopy category of an (∞,1)-category</a></li>
 </ul>
 </li>
-</ul><p><strong>Paths and cylinders</strong></p><ul>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a></p>
 
@@ -427,7 +447,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong>Homotopy groups</strong></p><ul>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+group">homotopy group</a></p>
 
@@ -483,9 +507,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+category">fundamental category</a></li>
 </ul>
 </li>
-</ul><p><strong>Basic facts</strong></p><ul>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+group+of+the+circle+is+the+integers">fundamental group of the circle is the integers</a></li>
-</ul><p><strong>Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+covering+spaces">fundamental theorem of covering spaces</a></p>
 </li>
@@ -521,7 +553,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+hypothesis">homotopy hypothesis</a>-theorem</p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -668,6 +701,10 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<ul>
+<li id="PursellTrimble91">Lyle Pursell, S. Y. Trimble, <em>Gram-Schmidt orthogonalization by Gauss Elimination</em>, The American Mathematical Monthly Vol. 98, No. 6 (1991), pp. 544-549 (<a href="https://www.jstor.org/stable/2324877">jstor:2324877</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -679,14 +716,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 24, 2018 at 11:18:46.
+  Last revised on December 30, 2018 at 18:11:45.
   See the <a href="https://ncatlab.org/nlab/history/Gram-Schmidt process" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gram-Schmidt+process" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gram-Schmidt+process/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Gram-Schmidt+process" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gram-Schmidt+process" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gram-Schmidt process/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
