--- a/pages/19658.html
+++ b/pages/19658.html
@@ -455,7 +455,7 @@ margin-left: 0em;
 
 <p>1) Begin at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> with the empty word.</p>
 
-<p>2) Walk along <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> following the orientation of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> until one reaches a crossing of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> which one approaches by means of an under-edge (one does not stop at crossings which one approaches and leaves by means of over-edges). If the orientations of the crossings are as follows, add the arc <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> to the end of the word obtained thus far.</p>
+<p>2) Walk along <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> following the orientation of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> until one reaches a crossing of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math> which one approaches by means of an under-edge (one does not stop at crossings which one approaches and leaves by means of over-edges). If the orientations of the crossings are as follows, add <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math> to the end of the word obtained thus far.</p>
 <div style="text-align: center">
 
 <svg xmlns:xlink="http://www.w3.org/1999/xlink" width="57.291pt" height="68.122pt" viewBox="0 0 57.291 68.122" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -483,7 +483,7 @@ margin-left: 0em;
 
 
 </div>
-<p>If the orientations of the arcs of the crossing are instead as follows, add the arc <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>a</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">a^{-1}</annotation></semantics></math> to the end of the word obtained thus far.</p>
+<p>If the orientations of the arcs of the crossing are instead as follows, add <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>a</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup></mrow><annotation encoding="application/x-tex">a^{-1}</annotation></semantics></math> to the end of the word obtained thus far.</p>
 <div style="text-align: center">
 
 <svg xmlns:xlink="http://www.w3.org/1999/xlink" width="57.291pt" height="68.122pt" viewBox="0 0 57.291 68.122" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -635,7 +635,7 @@ margin-left: 0em;
 <p>
 <div class='num_remark'>
 <h6>Remark</h6>
-<p>The longitude of a component of an oriented link diagram is unique up to <span class="newWikiWord">cyclic permutation<a href="/nlab/new/cyclic+permutation">?</a></span>: the longitude obtained using any one choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a cyclic permutation of the longitude obtained using any other choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>.</p>
+<p>The longitude of a component of an oriented link diagram is unique up to <a class="existingWikiWord" href="/nlab/show/cyclic+permutation">cyclic permutation</a>: the longitude obtained using any one choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a cyclic permutation of the longitude obtained using any other choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>.</p>
 
 <p>When it comes to 3-manifolds, for example when describing the <a class="existingWikiWord" href="/nlab/show/fundamental+group">fundamental group</a>, everything is typically invariant under cyclic permutation. Thus it is usual to speak of <em>the</em> longitude of a component of an oriented link diagram.</p>
 </div>
@@ -646,14 +646,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 17:48:40.
+  Last revised on December 30, 2018 at 19:58:38.
   See the <a href="https://ncatlab.org/nlab/history/longitude of a link component" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/longitude+of+a+link+component" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/longitude+of+a+link+component/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/longitude+of+a+link+component" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/longitude+of+a+link+component" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/longitude+of+a+link+component" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/longitude+of+a+link+component/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/longitude+of+a+link+component" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/longitude+of+a+link+component" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/longitude of a link component/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
