--- a/pages/3156.html
+++ b/pages/3156.html
@@ -602,6 +602,10 @@ margin-left: 0em;
 <li>
 <p>A AWFS <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>L</mi><mo>,</mo><mi>R</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(L,R)</annotation></semantics></math> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math> induces a levelwise AWFS on any diagram category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>K</mi> <mi>A</mi></msup></mrow><annotation encoding="application/x-tex">K^A</annotation></semantics></math>. Note that its underlying WFS will not be similarly “levelwise”. (Indeed, a WFS does not typically induce a levelwise WFS on a diagram category.)</p>
 </li>
+
+<li>
+<p>An AWFS can be detected as a <a class="existingWikiWord" href="/nlab/show/functorial+factorization">functorial factorization</a> that extends to a <a class="existingWikiWord" href="/nlab/show/monad">monad</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>cod</mi></mrow><annotation encoding="application/x-tex">cod</annotation></semantics></math> with a <a class="existingWikiWord" href="/nlab/show/composition+law+for+factorizations">composition law for factorizations</a>.</p>
+</li>
 </ul>
 
 <h2 id="small_object_argument">Small object argument</h2>
@@ -659,14 +663,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 17:10:54.
+  Last revised on December 30, 2018 at 19:18:45.
   See the <a href="https://ncatlab.org/nlab/history/algebraic weak factorization system" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/algebraic+weak+factorization+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/algebraic+weak+factorization+system/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/algebraic+weak+factorization+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/algebraic+weak+factorization+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/algebraic+weak+factorization+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/algebraic+weak+factorization+system/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/algebraic+weak+factorization+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/algebraic+weak+factorization+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/algebraic weak factorization system/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
