--- a/pages/19658.html
+++ b/pages/19658.html
@@ -635,9 +635,9 @@ margin-left: 0em;
 <p>
 <div class='num_remark'>
 <h6>Remark</h6>
-<p>The longitude of a component of an oriented link diagram is unique up to <a class="existingWikiWord" href="/nlab/show/cyclic+permutation">cyclic permutation</a>: the longitude obtained using any one choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a cyclic permutation of the longitude obtained using any other choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>.</p>
+<p>The longitude of a component of an oriented link diagram is unique up to <a class="existingWikiWord" href="/nlab/show/rotation+permutation">rotation permutation</a>: the longitude obtained using any one choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> is a rotation permutation of the longitude obtained using any other choice of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>.</p>
 
-<p>When it comes to 3-manifolds, for example when describing the <a class="existingWikiWord" href="/nlab/show/fundamental+group">fundamental group</a>, everything is typically invariant under cyclic permutation. Thus it is usual to speak of <em>the</em> longitude of a component of an oriented link diagram.</p>
+<p>When it comes to 3-manifolds, for example when describing the <a class="existingWikiWord" href="/nlab/show/fundamental+group">fundamental group</a>, everything is typically invariant under rotation permutation. Thus it is usual to speak of <em>the</em> longitude of a component of an oriented link diagram.</p>
 </div>
 </p>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/knot+theory">knot theory</a></div></body></html>
@@ -646,14 +646,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 19:58:38.
+  Last revised on December 31, 2018 at 02:46:15.
   See the <a href="https://ncatlab.org/nlab/history/longitude of a link component" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/longitude+of+a+link+component" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/longitude+of+a+link+component/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/longitude+of+a+link+component" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/longitude+of+a+link+component" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/longitude+of+a+link+component" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/longitude+of+a+link+component/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/longitude+of+a+link+component" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/longitude+of+a+link+component" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/longitude of a link component/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
