--- a/pages/19755.html
+++ b/pages/19755.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9112/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9112/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,11 @@ margin-left: 0em;
 
 <h4 id="group_theory">Group Theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/group">group</a>, <a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group">∞-group</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/group+object">group object</a>, <a class="existingWikiWord" href="/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category">group object in an (∞,1)-category</a></li>
@@ -331,7 +335,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/progroup">progroup</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/homogeneous+space">homogeneous space</a></li>
-</ul><h3 id="classical_groups">Classical groups</h3><ul>
+</ul>
+
+<h3 id="classical_groups">Classical groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/general+linear+group">general linear group</a></p>
 </li>
@@ -355,7 +363,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/symplectic+group">symplectic group</a></p>
 </li>
-</ul><h3 id="finite_groups">Finite groups</h3><ul>
+</ul>
+
+<h3 id="finite_groups">Finite groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a></p>
 </li>
@@ -375,11 +387,19 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Monster+group">Monster group</a>, <a class="existingWikiWord" href="/nlab/show/Mathieu+group">Mathieu group</a></li>
 </ul>
 </li>
-</ul><h3 id="group_schemes">Group schemes</h3><ul>
+</ul>
+
+<h3 id="group_schemes">Group schemes</h3>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/algebraic+group">algebraic group</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/abelian+variety">abelian variety</a></li>
-</ul><h3 id="topological_groups">Topological groups</h3><ul>
+</ul>
+
+<h3 id="topological_groups">Topological groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+group">topological group</a></p>
 </li>
@@ -395,7 +415,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+group">string group</a></p>
 </li>
-</ul><h3 id="lie_groups">Lie groups</h3><ul>
+</ul>
+
+<h3 id="lie_groups">Lie groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Lie+group">Lie group</a></p>
 </li>
@@ -407,7 +431,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kac-Moody+group">Kac-Moody group</a></p>
 </li>
-</ul><h3 id="superlie_groups">Super-Lie groups</h3><ul>
+</ul>
+
+<h3 id="superlie_groups">Super-Lie groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/super+Lie+group">super Lie group</a></p>
 </li>
@@ -415,7 +443,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/super+Euclidean+group">super Euclidean group</a></p>
 </li>
-</ul><h3 id="higher_groups">Higher groups</h3><ul>
+</ul>
+
+<h3 id="higher_groups">Higher groups</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/2-group">2-group</a></p>
 
@@ -453,7 +485,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/circle+n-group">circle n-group</a>, <a class="existingWikiWord" href="/nlab/show/string+2-group">string 2-group</a>, <a class="existingWikiWord" href="/nlab/show/fivebrane+Lie+6-group">fivebrane Lie 6-group</a></p>
 </li>
-</ul><h3 id="cohomology_and_extensions">Cohomology and Extensions</h3><ul>
+</ul>
+
+<h3 id="cohomology_and_extensions">Cohomology and Extensions</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a></p>
 </li>
@@ -465,13 +501,18 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%E2%88%9E-group+extension">∞-group extension</a>, <a class="existingWikiWord" href="/nlab/show/Ext-group">Ext-group</a></p>
 </li>
-</ul><h3 id="related_concepts">Related concepts</h3><ul>
+</ul>
+
+<h3 id="related_concepts">Related concepts</h3>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/quantum+group">quantum group</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/group+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -605,7 +646,7 @@ margin-left: 0em;
 </div>
 <div style="float:left;width:20%">
 <div>
- <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="40" se:nonce="39384">
+ <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="40" se:nonce="39384" xmlns="http://www.w3.org/2000/svg">
  <desc>Young diagram (3)</desc>
  <g>
   <title>Layer 1</title>
@@ -616,7 +657,7 @@ margin-left: 0em;
  </svg>
 </div>
 <div>
- <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="60" height="60" se:nonce="39384">
+ <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="60" height="60" se:nonce="39384" xmlns="http://www.w3.org/2000/svg">
  <desc>Young diagram (2,1)</desc>
  <g>
   <title>Layer 1</title>
@@ -627,7 +668,7 @@ margin-left: 0em;
  </svg>
 </div>
 <div>
- <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="90" se:nonce="39384">
+ <svg xmlns:se="http://svg-edit.googlecode.com" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="90" se:nonce="39384" xmlns="http://www.w3.org/2000/svg">
  <desc>Young diagram (1,1,1)</desc>
  <g>
   <title>Layer 1</title>
@@ -797,14 +838,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 28, 2018 at 09:55:10.
+  Last revised on December 31, 2018 at 03:42:18.
   See the <a href="https://ncatlab.org/nlab/history/symmetric group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/symmetric+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/symmetric+group/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/symmetric+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/symmetric+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/symmetric group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
