--- a/pages/19985.html
+++ b/pages/19985.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9358/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9358/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -607,7 +607,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative n-categories</em> PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Christoph+Dorn">Christoph Dorn</a>, <em>Associative n-categories</em>, PhD thesis (<a href="https://www.dornchristoph.com/writing/dphil_intro.pdf">pdf</a>, <a href="https://arxiv.org/abs/1812.10586">arXi:1812.10586</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -616,14 +616,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  8, 2018 at 02:11:36.
+  Last revised on December 31, 2018 at 05:08:11.
   See the <a href="https://ncatlab.org/nlab/history/associative n-category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/associative+n-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/associative+n-category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/associative+n-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/associative+n-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/associative+n-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/associative+n-category/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/associative+n-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/associative+n-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/associative n-category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
